translate datePicker and bugg with z-index

--- a/lm-labs-webapp/src/main/resources/skin/resources/less/theme/labs.less
+++ b/lm-labs-webapp/src/main/resources/skin/resources/less/theme/labs.less
@@ -412,6 +412,10 @@ section.labsnews {
 	width: @labsNewsSummaryWidth;
 }
 
+.ui-datepicker
+{
+    z-index: 102 !important; /* must be > than .btn (201) */
+}
 
 [class^="icon-"],
 [class*=" icon-"] {
